<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.princeapp.toastapp.MainActivity" >

    <Button
        android:id="@+id/thecatbtn"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#c51162"
        android:text="@string/thecatbtn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/thn1btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.68"
            android:background="#0091ea"
            android:text="@string/thn1btn" />

        <Button
            android:id="@+id/thn2btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.65"
            android:background="#0091ea"
            android:text="@string/thn2btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.54"
        android:orientation="vertical" >

        <Button
            android:id="@+id/thinamabtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#aeea00"
            android:text="@string/thinamabtn" />

        <Button
            android:id="@+id/sallybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#33b5e5"
            android:text="@string/sallybtn" />

        <Button
            android:id="@+id/nickbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#64dd17"
            android:text="@string/nickbtn" />

        <Button
            android:id="@+id/drsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#33b5e5"
            android:text="@string/drsbtn" />

    </LinearLayout>

</TableLayout>